fix : Home - post overflow bug

--- a/src/app/components/Recipe.module.scss
+++ b/src/app/components/Recipe.module.scss
@@ -6,10 +6,6 @@
   }
 }
 
-.link {
-  min-height: 300px;
-}
-
 .container {
   height: 100%;
   display: flex;
@@ -62,7 +58,6 @@
   position: relative;
   width: 100%;
   height: 100%;
-  min-height: 300px;
 
   img {
     object-fit: cover;
@@ -87,7 +82,6 @@
 }
 
 .img-box {
-  min-height: 300px;
   position: relative;
   width: 100%;
   height: 100%;
@@ -98,7 +92,6 @@
 }
 
 .information {
-  min-height: 300px;
   z-index: 1;
   display: flex;
   flex-direction: column;
